--- a/HedgeModManager/UI/OptionsWindow.xaml
+++ b/HedgeModManager/UI/OptionsWindow.xaml
@@ -17,7 +17,7 @@
         <StackPanel x:Name="CheckStack" Grid.Row="1" VerticalAlignment="Center" Margin="5,0,5,0" Width="Auto" Height="Auto"/>
         <TextBlock x:Name="ErrorLabel" Text="{StaticResource OptionsWindowUIError}"  Grid.Row="2" VerticalAlignment="Center" FontSize="12" Margin="5,0,0,0" Foreground="Red" Visibility="Hidden"/>
         <StackPanel x:Name="Stack" Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Stretch">
-            <Button Width="60" Height="23" Margin="5" Content="{StaticResource CommonUIOK}" Click="Ok_Click"/>
+            <Button Width="60" Height="23" Margin="5" Content="{StaticResource CommonUIOK}" Click="Ok_Click" IsDefault="True"/>
             <Button Width="60" Height="23" Margin="5" Content="{StaticResource CommonUICancel}" IsCancel="True"/>
         </StackPanel>
     </Grid>
