--- a/HedgeModManager/UI/GBModWindow.xaml
+++ b/HedgeModManager/UI/GBModWindow.xaml
@@ -43,7 +43,7 @@
                     <ScrollViewer Grid.Row="1" Margin="10,0,5,40">
                         <StackPanel x:Name="CreditsPanel" Orientation="Vertical"/>
                     </ScrollViewer>
-                    <Button Grid.Row="1" Height="25" Content="Download" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Margin="5" Click="Download_Click"/>
+                    <Button Grid.Row="1" Height="25" Content="Download" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Margin="5" Click="Download_Click" IsDefault="True"/>
                 </Grid>
             </Grid>
         </Grid>
