--- a/HedgeModManager/UI/ModConfigWindow.xaml
+++ b/HedgeModManager/UI/ModConfigWindow.xaml
@@ -16,8 +16,8 @@
             <Grid x:Name="ItemsHost" Margin="15,0"/>
         </ScrollViewer>
         <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="-4" Grid.Row="1" Background="{StaticResource HMM.Window.DialogBottom}">
-            <Button Content="{StaticResource CommonUICancel}" Margin="8,0,0,0" VerticalAlignment="Center" Width="75" Height="23" Click="UI_Cancel_Click"/>
-            <Button Content="{StaticResource CommonUIOK}" Margin="8,0,0,0" VerticalAlignment="Center" Width="75" Height="23" Click="UI_OK_Click"/>
+            <Button Content="{StaticResource CommonUICancel}" Margin="8,0,0,0" VerticalAlignment="Center" Width="75" Height="23" Click="UI_Cancel_Click" IsCancel="True"/>
+            <Button Content="{StaticResource CommonUIOK}" Margin="8,0,0,0" VerticalAlignment="Center" Width="75" Height="23" Click="UI_OK_Click" IsDefault="True"/>
         </StackPanel>
     </Grid>
 </Window>
