--- a/HedgeModManager/UI/ExceptionWindow.xaml
+++ b/HedgeModManager/UI/ExceptionWindow.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HedgeModManager"
              mc:Ignorable="d" 
+             MinHeight="600" MinWidth="1000"
              Height="600" Width="1000" Title="HedgeModManager Crash"
              WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Background="#FF2D2D30" Style="{StaticResource HedgeWindow}">
     <Window.Resources>
