--- a/HedgeModManager/Languages/ru-RU.xaml
+++ b/HedgeModManager/Languages/ru-RU.xaml
@@ -33,6 +33,7 @@
     <system:String x:Key="ModsUISupportSave"    >Поддержка сохр.</system:String>
     <system:String x:Key="ModsUIHasUpdate"      >Обновления</system:String>
     <system:String x:Key="ModsUIModDescription" >Описание</system:String>
+    <system:String x:Key="ModsUIModFavorite"    >Избранное</system:String>
     <system:String x:Key="ModsUIModConfigure"   >Настройки мода</system:String>
     <system:String x:Key="ModsUIModOpenFolder"  >Открыть папку с модом</system:String>
     <system:String x:Key="ModsUIModCheckUpdates">Проверить наличие обновления</system:String>
@@ -43,6 +44,8 @@
     <!-- Codes UI Strings -->
     <system:String x:Key="CodesUIName"    >Название</system:String>
     <system:String x:Key="CodesUIDownload">Загрузить пользовательские коды</system:String>
+    <system:String xml:space="preserve" x:Key="CodesUIVersionIncompatible">Установленные коды несовместимы с загрузчиком кодов.&#x0a;Пожалуйста, обновите коды, а также загрузчик кодов.&#x0a;ВНИМАНИЕ: Это приведет к удалению всех пользовательских кодов.</system:String>
+
 
     <!-- Settings UI Strings -->
     <!--   Game & Mod Loader -->
