--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -133,7 +133,7 @@
                                     <CheckBox Content="{DynamicResource SettingsUIKeepHMMOpen}"     IsChecked="{Binding CPKREDIR.KeepOpen}"           Margin="10,70,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="15"/>
                                     <Button   Content="{DynamicResource SettingsUIAboutHMM}"                                                          Margin="0,0,10,10" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="48" Width="195" Click="UI_About_Click"/>
                                     <Label    Content="{DynamicResource SettingsUILanguage}"                                                           Margin="10,0,0,17" HorizontalAlignment="Left" VerticalAlignment="Bottom" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"  />
-                                    <ComboBox x:Name="ComboBox_Languages" ItemsSource="{Binding SupportedCultures}" DisplayMemberPath="Key"  Margin="73,0,0,16" HorizontalAlignment="Left" VerticalAlignment="Bottom" VerticalContentAlignment="Center" Width="236" Height="27" SelectionChanged="ComboBox_Languages_Changed" />
+                                    <ComboBox x:Name="ComboBox_Languages" ItemsSource="{Binding SupportedCultures, Source={x:Static Application.Current}}" SelectedItem="{Binding CurrentCulture, Source={x:Static Application.Current}}" DisplayMemberPath="Name"  Margin="73,0,0,16" HorizontalAlignment="Left" VerticalAlignment="Bottom" VerticalContentAlignment="Center" Width="236" Height="27" SelectionChanged="ComboBox_Languages_Changed" Loaded="ComboBox_Languages_Loaded" />
                                 </Grid>
                             </GroupBox>
                         </Grid>
