--- a/HedgeModManager/Languages/zh-CN.xaml
+++ b/HedgeModManager/Languages/zh-CN.xaml
@@ -79,6 +79,7 @@
     <system:String x:Key="MainUISelectModsDBTitle"   >选择從何处加载MOD…</system:String>
     <system:String x:Key="MainUIRuntimeMissingTitle" >检测到缺少运行环境！</system:String>
     <system:String x:Key="MainUIRuntimeMissingMsg" xml:space="preserve">{0} 需要 {1} 安装在MOD上 &#x0a;来正常运行, 你想要使用HMM来安装这个运行环境吗？ </system:String>
+    <system:String x:Key="MainUISaveFileRedirectionDisabled" xml:space="preserve">使用一个或多个的MOD时需要启用「保存文件重新定向」才能正常工作。 需要启用此功能吗？＆＃x0a;（当您知道自己在做什么时候才单击否。）</system:String>
 
     <!-- OptionsWindow UI Strings -->
     <system:String x:Key="OptionsWindowUIError"      >请选择一个选项！</system:String>
